--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,5 @@
 <resources>
-    <string name="app_name">TakeMeBack</string>
-    <string name="title_activity_map">Map</string>
+    <string name="app_name">Take Me Back Where I Came From</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
