--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,8 @@
     <string name="splash_msg">Take me back where I came from</string>
     <string name="location_permission_required">It is necessary that you grant the app a permission to track your current location.
     It is used only for the correct app work and will not be shared to anyone.</string>
+    <string name="about">This application is being developed for the fulfillment of the requirements of the MSc course in
+    Advanced Software Engineering at the University of Sheffield. All rights reserved.</string>>
+    <string name="developer">Developer: Aleksandr Sergeev</string>>
+    <string name="supervisor">Supervisor: Prof. Fabio Ciravegna</string>
 </resources>
