New Settings Fragment, set visibility of Visited Locations

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     Advanced Software Engineering at the University of Sheffield. All rights reserved.</string>>
     <string name="developer">Developer: Aleksandr Sergeev</string>>
     <string name="supervisor">Supervisor: Prof. Fabio Ciravegna</string>
+    <string name="mode_note">*Note: if the switch is off, the application will be working in manual mode and you have to manually save the location by clicking "SAVE CURRENT LOCATION" button in the Map Fragment.</string>
 </resources>
